<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f0f3e2"
    tools:context=".Bebidas">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/vegetales_pregunta"
        android:textAlignment="center"
        android:textColor="#1b212e"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/Seleccione_repuesta"
        android:textColor="#95988e"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="383dp"
        android:layout_height="472dp"
        android:layout_marginTop="32dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/redondeo">

            <CheckBox
                android:id="@+id/box_lechuga"
                style="@android:style/Widget.CompoundButton.CheckBox"
                android:layout_width="258dp"
                android:layout_height="80dp"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/box_lechuga"
                android:textColor="#B55A0B"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:src="@drawable/lechuga"></ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:background="@drawable/redondeo">

            <CheckBox
                android:id="@+id/box_pepino"
                android:layout_width="258dp"
                android:layout_height="80dp"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/box_pepino"
                android:textColor="#C3860E"
                android:textSize="25sp"
                android:textStyle="bold" ></CheckBox>
            <ImageView
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:src="@drawable/pepino"></ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:background="@drawable/redondeo">

            <CheckBox
                android:id="@+id/box_col"
                android:layout_width="258dp"
                android:layout_height="80dp"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/box_col"
                android:textColor="#496C07"
                android:textSize="25sp"
                android:textStyle="bold" />
            <ImageView
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:src="@drawable/col"></ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:background="@drawable/redondeo">
            <CheckBox
                android:id="@+id/box_betarraga"
                android:layout_width="258dp"
                android:layout_height="80dp"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/box_betarraga"
                android:textColor="#ED114F"
                android:textSize="25sp"
                android:textStyle="bold" />
            <ImageView
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:src="@drawable/betarraga"></ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:background="@drawable/redondeo">
            <CheckBox
                android:id="@+id/box_espinaca"
                android:layout_width="258dp"
                android:layout_height="80dp"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/box_espinaca"
                android:textColor="#026A10"
                android:textSize="25sp"
                android:textStyle="bold" />
            <ImageView
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:src="@drawable/espinacas"></ImageView>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp"
        android:gravity="right"
        android:paddingRight="15dp"
        >
        <ImageButton
            android:id="@+id/botonsiguiente5"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="@drawable/redondeo_siguiente"
            android:src="@drawable/next"
            ></ImageButton>
    </LinearLayout>

</LinearLayout>