<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Bebidas">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/carnes_pregunta"
        android:textAlignment="center"
        android:textColor="#8C6C54"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/Seleccione_repuesta"
        android:textColor="#8C6C54"
        android:layout_marginStart="20dp"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="383dp"
        android:layout_height="472dp"
        android:layout_marginTop="32dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/redondeo_carne">

            <CheckBox
                android:id="@+id/box_gaseosas"
                style="@android:style/Widget.CompoundButton.CheckBox"
                android:layout_width="258dp"
                android:layout_height="80dp"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/box_pescado"
                android:textColor="#2E5B95"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:src="@drawable/pez"></ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:background="@drawable/redondeo_carne">

            <CheckBox
                android:id="@+id/box_energizantes"
                android:layout_width="258dp"
                android:layout_height="80dp"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/box_pollo"
                android:textColor="#4A8BE0"
                android:textSize="25sp"
                android:textStyle="bold" ></CheckBox>
            <ImageView
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:src="@drawable/pollo"></ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:background="@drawable/redondeo_carne">

            <CheckBox
                android:id="@+id/box_jugos"
                android:layout_width="258dp"
                android:layout_height="80dp"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/box_res"
                android:textColor="#E06D60"
                android:textSize="25sp"
                android:textStyle="bold" />
            <ImageView
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:src="@drawable/carne"></ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:background="@drawable/redondeo_carne">
            <CheckBox
                android:id="@+id/box_refrescos"
                android:layout_width="258dp"
                android:layout_height="80dp"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/box_cerdo"
                android:textColor="#943B31"
                android:textSize="25sp"
                android:textStyle="bold" />
            <ImageView
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:src="@drawable/cerdo"></ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:background="@drawable/redondeo_carne">
            <CheckBox
                android:id="@+id/box_te"
                android:layout_width="258dp"
                android:layout_height="80dp"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/box_vegano"
                android:textColor="#859431"
                android:textSize="25sp"
                android:textStyle="bold" />
            <ImageView
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:src="@drawable/vegano"></ImageView>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp"
        android:gravity="right"
        android:paddingRight="15dp"
        >
        <ImageButton
            android:id="@+id/botonsiguiente"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="@drawable/redondeo"
            android:src="@drawable/next"
            ></ImageButton>
    </LinearLayout>

</LinearLayout>