<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Bebidas">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/frutas_pregunta"
        android:textAlignment="center"
        android:textColor="#8C6C54"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/Seleccione_repuesta"
        android:textColor="#8C6C54"
        android:layout_marginStart="20dp"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="383dp"
        android:layout_height="472dp"
        android:layout_marginTop="32dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/redondeo_fruta">

            <CheckBox
                android:id="@+id/box_mandarina"
                style="@android:style/Widget.CompoundButton.CheckBox"
                android:layout_width="258dp"
                android:layout_height="80dp"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/box_mandarina"
                android:textColor="#B55A0B"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:src="@drawable/mandarina"></ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:background="@drawable/redondeo_fruta">

            <CheckBox
                android:id="@+id/box_fresa"
                android:layout_width="258dp"
                android:layout_height="80dp"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/box_fresa"
                android:textColor="#F15D38"
                android:textSize="25sp"
                android:textStyle="bold" ></CheckBox>
            <ImageView
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:src="@drawable/fresa"></ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:background="@drawable/redondeo_fruta">

            <CheckBox
                android:id="@+id/box_manzana"
                android:layout_width="258dp"
                android:layout_height="80dp"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/box_manzana"
                android:textColor="#E82A14"
                android:textSize="25sp"
                android:textStyle="bold" />
            <ImageView
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:src="@drawable/manzana"></ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:background="@drawable/redondeo_fruta">
            <CheckBox
                android:id="@+id/box_platano"
                android:layout_width="258dp"
                android:layout_height="80dp"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/box_platanos"
                android:textColor="#ED8A11"
                android:textSize="25sp"
                android:textStyle="bold" />
            <ImageView
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:src="@drawable/platanos"></ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:background="@drawable/redondeo_fruta">
            <CheckBox
                android:id="@+id/box_sandia"
                android:layout_width="258dp"
                android:layout_height="80dp"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/box_sandia"
                android:textColor="#E42249"
                android:textSize="25sp"
                android:textStyle="bold" />
            <ImageView
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:src="@drawable/sandia"></ImageView>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp"
        android:gravity="right"
        android:paddingRight="15dp"
        >
        <ImageButton
            android:id="@+id/botonsiguiente4"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="@drawable/redondeo"
            android:src="@drawable/next"
            ></ImageButton>
    </LinearLayout>

</LinearLayout>